# Financial-Modeling

./: README.md  index.html
.github/workflows/: deploy.yml
Black-Scholes-Model/: README.md  black_scholes_model.py
assets/: index-D_TH06j9.css
python-model/Black-Scholes-Model/: pyproject.toml
python-model/docs/: poetry-management.md
ts-visualizer/: index.html  package.json  vite.config.ts
ts-visualizer/.github/workflows/: deploy.yml
ts-visualizer/docs/: modular-visualizer.md
ts-visualizer/docs/models/: black-scholes.md
ts-visualizer/src/: App.css  App.tsx  index.css
ts-visualizer/src/components/: ModelVisualizer.tsx  SliderControl.tsx
ts-visualizer/src/models/: BlackScholes.tsx  BlackScholesModel.ts  registry.ts  types.ts
