[project]
name = "black-scholes-model"
version = "0.1.0"
description = ""
authors = [{ name = "Seung Ki Lee", email = "seungkilee.cs@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["scipy (>=1.16.2,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
